@@ -3,7 +3,6 @@
 !.gitignore
 !.gitattributes
 !.clang-format
-!.travis.yml
 !.mailmap
 !.codecov.yml
 
