@@ -8,6 +8,7 @@
 	- removes btt support from pmemspoil
 	- removes libpmemlog tests and examples
 	- removes libpmemblk tests and examples
+	- remove support for Travis bulids
 	- ...
 
 Wed May 31 2023 Oksana Sałyk <oksana.salyk@intel.com>
